    * added "dc1394bool_t abs_control" to "dc1394_feature_info" struct
    * fixed, cleaned-up and finalized the absolute control code

Fri Oct 23 17:19:00 2002 <ddouxchamps@users.sf.net>
    * fixed missing <<16 shift in dc394_get_format7_unit_position

Sun Oct 27 00:13:00 2002 <dan@dennedy.org>
    * added examples/dc1394_vloopback.c to demonstrate how to make
      digital camera format0 a Video4Linux source.

Mon Nov 18 10:15:23 2002 <ddouxchamps@users.sf.net>
    * we now use packet_per_frame correctly for format7. This should
      fix 'walking' frames in DMA mode.
	
Mon Nov 20 10:35:00 2002 <ddouxchamps@users.sf.net>
    * Use a little trick from Martin Gramatke to avoid misinterpreta-
      tion of TOTAL_BYTES registers. We don't use the latter register
      anymore.
	
Wed Jul 2 14:35:00 2003 <ddouxchamps@users.sf.net>
    * fixed some F7 issues. Thanks to Kero van Gelder.
    * changed total_bytes to unsigned long long int in
      dc1394_query_format7_total_bytes.

Wed Jul 30 09:32:01 CEST 2003 <ddouxchamps@users.sf.net>
    * fixed bytes_per_packet setting in _dc1394_basic_format7_setup
    * cancelled the previous commit (18/7/2003): it was a mistake.

2003-08-12  dan <dan@dennedy.org>
   * dc1394_control.c: make config ROM reading more generic,
     remove tab indenting to make consistent
   * configure.in: incrmement lib revision

2003-08-13 Damien <ddouxchamps@users.sf.net>
	* dc1394_control.c: cleanup config ROM code; fix for Point
	        Grey cameras

2003-08-20  dan <dan@dennedy.org>
    * use command register base from config rom offset instead of hardcoded
    * make raw1394 userdata point to a new dc1394_camerahandle struct 
      containing port, software version, and command register base


2003-08-28 Damien <ddouxchamps@users.sf.net>
    * fixed feature detection: we now use both 0x404 and 0x5XX registers in
      dc1394_is_feature_present. dc1394_query_feature_control is deprecated
      and has been commented out. 

	