@@ -18,6 +18,9 @@
 **-------------------------------------------------------------------------
 **
 **  $Log$
+**  Revision 1.2  2003/09/02 23:42:36  ddennedy
+**  cleanup handle destroying in examples; fix dc1394_multiview to use handle per camera; new example
+**
 **  Revision 1.1  2002/10/27 04:21:54  ddennedy
 **  added v4l utility using vloopback
 **
@@ -38,18 +41,20 @@
 #include <linux/videodev.h>
 #define _GNU_SOURCE
 #include <getopt.h>
+#include <errno.h>
 
 #include <libraw1394/raw1394.h>
 #include <libdc1394/dc1394_control.h>
 
-#undef USE_v4L_MMAP
+#define USE_v4L_MMAP
 
 /* uncomment the following to drop frames to prevent delays */
 #define DROP_FRAMES 1
-#define MAX_PORTS 3
+#define MAX_PORTS   4
 #define NUM_BUFFERS 8
-#define WIDTH 640
-#define HEIGHT 480
+#define WIDTH       320
+#define HEIGHT      240
+#define V4L_BUFFERS 1
 
 /* declarations for libdc1394 */
 int numPorts = MAX_PORTS;
@@ -61,7 +66,7 @@ dc1394_feature_set features;
 /* Video4Linux globals */
 int v4l_dev = -1;
 char *image_out = NULL;
-int v4l_fmt = VIDEO_PALETTE_RGB24;
+int v4l_fmt = VIDEO_PALETTE_YUV422;
 #define MAXIOCTL 1024
 char ioctlbuf[MAXIOCTL];
 
@@ -70,7 +75,7 @@ char *dc_dev_name = NULL;
 char *v4l_dev_name = "/dev/video0";
 int width = WIDTH;
 int height = HEIGHT;
-int size = WIDTH*HEIGHT*3;
+int size = WIDTH*HEIGHT*2;
 
 static struct option long_options[]={
 	{"dc_dev",1,NULL,0},
@@ -116,7 +121,7 @@ void get_options(int argc,char *argv[])
 /* Video4Linux vloopback stuff */
 int start_pipe (int dev, int width, int height, int format)
 {
-        struct video_capability vid_caps;
+	struct video_capability vid_caps;
 	struct video_window vid_win;
 	struct video_picture vid_pic;
 
@@ -149,15 +154,8 @@ int start_pipe (int dev, int width, int height, int format)
 
 int put_image(int dev, char *image, int size)
 {
-	int i;
-	char pixels[3*640*480];
-	
-	for (i = 0; i < size; i+=3)
-	{
-		pixels[i+2] = image[i+0];
-		pixels[i+1] = image[i+1];
-		pixels[i+0] = image[i+2];
-	}
+	char pixels[size];
+	swab(image, pixels, size);
 	if (write(dev, pixels, size) != size) {
 		perror("Error writing image to pipe!");
 		return 0;
@@ -167,20 +165,13 @@ int put_image(int dev, char *image, int size)
 
 /* more direct way */
 
-int get_frame(void)
+int get_frame(int offset)
 {
-	int i;
-	const int size = 640*480*3;
-
-	dc1394_dma_single_capture(&camera);
-	for (i = 0; i < size; i+=3)
+	if ( dc1394_dma_single_capture(&camera) == DC1394_SUCCESS)
 	{
-		image_out[i+2] = camera.capture_buffer[i+0];
-		image_out[i+1] = camera.capture_buffer[i+1];
-		image_out[i+0] = camera.capture_buffer[i+2];
+		swab(camera.capture_buffer, image_out+offset, WIDTH*HEIGHT*2);
+		dc1394_dma_done_with_buffer(&camera);
 	}
-	dc1394_dma_done_with_buffer(&camera);
-	
 	return 0;
 }
 
@@ -202,7 +193,7 @@ int v4l_ioctl(unsigned long int cmd, void *arg)
 		{
 			struct video_capability *vidcap=arg;
 
-			sprintf(vidcap->name, "Jeroen's dummy v4l driver");
+			sprintf(vidcap->name, "IEEE 1394 Digital Camera");
 			vidcap->type= VID_TYPE_CAPTURE;
 			vidcap->channels=1;
 			vidcap->audios=0;
@@ -217,7 +208,7 @@ int v4l_ioctl(unsigned long int cmd, void *arg)
 			struct video_channel *vidchan=arg;
 			
 			if (vidchan->channel!=0)
-				return 1;
+				return EINVAL;
 			vidchan->flags=0;
 			vidchan->tuners=0;
 			vidchan->type= VIDEO_TYPE_CAMERA;
@@ -227,10 +218,9 @@ int v4l_ioctl(unsigned long int cmd, void *arg)
 		}
 		case VIDIOCSCHAN:
 		{
-			int *v=arg;
-			
-			if (v[0]!=0)
-				return 1;
+			// int *v=arg;
+			// v[0] is the new channel?
+			// ignore channel changes
 			return 0;
 		}
 		case VIDIOCGPICT:
@@ -242,8 +232,9 @@ int v4l_ioctl(unsigned long int cmd, void *arg)
 			vidpic->brightness=0xffff;
 			vidpic->contrast=0xffff;
 			vidpic->whiteness=0xffff;
-			vidpic->depth=3;
-			vidpic->palette=v4l_fmt;
+			vidpic->depth=2;
+			vidpic->palette=v4l_fmt; 
+
 			return 0;
 		}
 		case VIDIOCSPICT:
@@ -251,7 +242,7 @@ int v4l_ioctl(unsigned long int cmd, void *arg)
 			struct video_picture *vidpic=arg;
 			
 			if (vidpic->palette!=v4l_fmt)
-				return 1;
+				return EINVAL;
 			return 0;
 		}
 		case VIDIOCGWIN:
@@ -273,9 +264,9 @@ int v4l_ioctl(unsigned long int cmd, void *arg)
 			
 			if (vidwin->width > WIDTH ||
 			    vidwin->height > HEIGHT )
-				return 1;
+				return EINVAL;
 			if (vidwin->flags)
-				return 1;
+				return EINVAL;
 			width=vidwin->width;
 			height=vidwin->height;
 			printf("new size: %dx%d\n", width, height);
@@ -285,8 +276,8 @@ int v4l_ioctl(unsigned long int cmd, void *arg)
 		{
 			struct video_mbuf *vidmbuf=arg;
 
-			vidmbuf->size=width*height*3;
-			vidmbuf->frames=1;
+			vidmbuf->size=width*height*2;
+			vidmbuf->frames = V4L_BUFFERS;
 			for (i=0; i<vidmbuf->frames; i++)
 				vidmbuf->offsets[i]=i*vidmbuf->size;
 			return 0;
@@ -295,11 +286,10 @@ int v4l_ioctl(unsigned long int cmd, void *arg)
 		{
 			struct video_mmap *vidmmap=arg;
 
-			return 0;
 			if (vidmmap->height>HEIGHT ||
 			    vidmmap->width>WIDTH ||
 			    vidmmap->format!=v4l_fmt )
-				return 1;
+				return EINVAL;
 			if (vidmmap->height!=height ||
 			    vidmmap->width!=width) {
 				height=vidmmap->height;
@@ -313,10 +303,10 @@ int v4l_ioctl(unsigned long int cmd, void *arg)
 		case VIDIOCSYNC:
 		{
 			//struct video_mmap *vidmmap=arg;
-
+			int frame = *(int*)arg;
 			// check if frames are ready.
 			// wait until ready.
-			get_frame();
+			get_frame( frame*width*height*2 );
 			return 0;
 		}
 		default:
@@ -370,7 +360,7 @@ void cleanup(void) {
 	{
 		dc1394_dma_unlisten( handle, &camera );
 		dc1394_dma_release_camera( handle, &camera);
-		raw1394_destroy_handle(handle);
+		dc1394_destroy_handle(handle);
 	}
 	if (image_out != NULL)
 		free(image_out);
@@ -434,8 +424,8 @@ int main(int argc,char *argv[])
 			}
 			 
 			if (dc1394_dma_setup_capture(handle, camera.node,  channel,
-									FORMAT_VGA_NONCOMPRESSED, MODE_640x480_RGB,
-									SPEED_400, FRAMERATE_15, NUM_BUFFERS, DROP_FRAMES,
+									FORMAT_VGA_NONCOMPRESSED, MODE_320x240_YUV422,
+									SPEED_400, FRAMERATE_30, NUM_BUFFERS, DROP_FRAMES,
 									dc_dev_name, &camera) != DC1394_SUCCESS) 
 			{
 				fprintf(stderr, "unable to setup camera- check line %d of %s to make sure\n",
@@ -475,7 +465,7 @@ int main(int argc,char *argv[])
 	
 	
 #ifdef USE_v4L_MMAP
-	image_out = v4l_create(v4l_dev, WIDTH*HEIGHT*3);
+	image_out = v4l_create(v4l_dev, WIDTH*HEIGHT*2 * V4L_BUFFERS);
 	if (!image_out) {
 		perror ("Failed to set device to zero-copy mode");
 		cleanup();
@@ -495,9 +485,11 @@ int main(int argc,char *argv[])
 	printf("Running. Press Ctrl+C to quit.\n");
 	while(1){
 
-		dc1394_dma_single_capture(&camera);
-		put_image( v4l_dev, (char *) camera.capture_buffer, size);
-		dc1394_dma_done_with_buffer(&camera);
+		if (dc1394_dma_single_capture(&camera) == DC1394_SUCCESS)
+		{
+			put_image( v4l_dev, (char *) camera.capture_buffer, size);
+			dc1394_dma_done_with_buffer(&camera);
+		}
 		
 	} /* while not interrupted */
 #endif
