@@ -12,6 +12,9 @@
 **-------------------------------------------------------------------------
 **
 **  $Log$
+**  Revision 1.4  2003/09/02 23:42:36  ddennedy
+**  cleanup handle destroying in examples; fix dc1394_multiview to use handle per camera; new example
+**
 **  Revision 1.3  2001/10/16 09:14:14  ronneber
 **  - added more meaningful error message, when no raw1394 handle could be get
 **  - does not exit anymore, when camera has no trigger
@@ -67,7 +70,7 @@ int main(int argc, char *argv[])
   if (numCameras<1)
   {
     fprintf( stderr, "no cameras found :(\n");
-    raw1394_destroy_handle(handle);
+    dc1394_destroy_handle(handle);
     exit(1);
   }
   printf("working with the first camera on the bus\n");
@@ -101,6 +104,7 @@ int main(int argc, char *argv[])
              "for more information see the FAQ at \n"
              "http://linux1394.sourceforge.net/faq.html#DCbusmgmt\n"
              "\n");
+    dc1394_destroy_handle(handle);
     exit( 1);
   }
   
@@ -121,7 +125,7 @@ int main(int argc, char *argv[])
              "supported by your camera\n",
              __LINE__,__FILE__);
     dc1394_release_camera(handle,&camera);
-    raw1394_destroy_handle(handle);
+    dc1394_destroy_handle(handle);
     exit(1);
   }
   
@@ -132,7 +136,7 @@ int main(int argc, char *argv[])
     fprintf( stderr, "unable to set camera trigger mode\n");
 #if 0
     dc1394_release_camera(handle,&camera);
-    raw1394_destroy_handle(handle);
+    dc1394_destroy_handle(handle);
     exit(1);
 #endif
   }
@@ -160,7 +164,7 @@ int main(int argc, char *argv[])
   {
     fprintf( stderr, "unable to start camera iso transmission\n");
     dc1394_release_camera(handle,&camera);
-    raw1394_destroy_handle(handle);
+    dc1394_destroy_handle(handle);
     exit(1);
   }
 
@@ -171,7 +175,7 @@ int main(int argc, char *argv[])
   {
     fprintf( stderr, "unable to capture a frame\n");
     dc1394_release_camera(handle,&camera);
-    raw1394_destroy_handle(handle);
+    dc1394_destroy_handle(handle);
     exit(1);
   }
 
@@ -192,7 +196,7 @@ int main(int argc, char *argv[])
   {
     perror( "Can't create '" IMAGE_FILE_NAME "'");
     dc1394_release_camera(handle,&camera);
-    raw1394_destroy_handle(handle);
+    dc1394_destroy_handle(handle);
     exit( 1);
   }
   
@@ -208,6 +212,6 @@ int main(int argc, char *argv[])
    *  Close camera
    *-----------------------------------------------------------------------*/
   dc1394_release_camera(handle,&camera);
-  raw1394_destroy_handle(handle);
+  dc1394_destroy_handle(handle);
   return 0;
 }
